src/ui/styles/Library.css
.library {
    position: relative;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;

}

.library-info {
    display: flex;
    flex-direction: column;
    position: relative;
    left: 1.5rem;
    top: 0.5rem;
    width: 100%;
    color: var(--text-color-secondary);
    font-size: 0.85rem;
}

.library-title {
    color: var(--text-color-primary);
    font-size: 1.2rem;
    margin-bottom: 0.6rem;
    font-weight: bold;

}

.instances {
    position: absolute;
    top: 5rem;
    height: 10rem;
    width: calc(100% - 2rem);
    left: 1.5rem;
    grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
    grid-gap: 1rem;
    display: grid;
}

.instance {
    position: relative;
    aspect-ratio: 1.4 / 1;
    cursor: pointer;
    transition: all 0.15s ease-in-out;
}

.instance:hover {
    transform: scale(1.05);
}

.instance-background {
    position: absolute;
    opacity: 1;
    filter: blur(0.75px);
    height: 100%;
}

.instance-content {
    width: 100%;
    position: absolute;
    height: 100%;
    bottom: 0;
    border-radius: 0.7rem;
    overflow: hidden;
    box-shadow: 0 0 0.2rem rgb(0 0 0 / 10%);
    display: flex;
    justify-content: center;
    align-items: center;
}

.instance-info {
    position: absolute;
    background-color: #202832c6;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--text-color-secondary);
    transition: all 0.15s ease-in-out;

}

.instance:hover .instance-info {
    background-color: #20283291;
    color: var(--text-color-primary);

}

.instance-type img {
    filter: var(--text-filter-secondary);
    transition: all 0.15s ease-in-out;
}

.instance-content span img {
    margin-bottom: 0.5rem;
    width: 35%;
}

.instance:hover .instance-type img {
    filter: var(--text-filter-primary);
}

.instance-content span {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

.instance-type {
    left: 0.2rem;
    width: 1rem;
}

.instance-info div {
    position: absolute;
    top: 0.2rem;
    right: 0.2rem;
    background-color: var(--side-bar-color);
    opacity: 0.5;
    padding: 0.3rem;
    border-radius: 0.5rem;
    overflow: hidden;
    word-wrap: none;
    font-size: 0.8rem;
    max-width: 35%;
    white-space: nowrap;
}

